--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
-    <title>Smash Burguers</title>
+    <title>Smash Burgers</title>
 </head>
 
 <body>
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/mega.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/mega.jpg" class="d-block w-100" alt="Mega Burger">
             </div>
             <div class="carousel-item">
-                <img src="./assets/trple burguer.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/trple burguer.jpg" class="d-block w-100" alt="Triple Burger">
             </div>
             <div class="carousel-item">
-                <img src="./assets/cheese.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/cheese.jpg" class="d-block w-100" alt="chesse Burger">
             </div>
             <div class="carousel-item">
-                <img src="./assets/clasica.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/clasica.jpg" class="d-block w-100" alt="Clasica Burger">
             </div>
         </div>
     </div>
@@ -67,8 +67,8 @@
         <i class="fa-regular fa-x" id="close-cart"></i>
     </div>
 
-    <h1 class="animate__animated animate__jackInTheBox">Smash Burguer</h1>
-    <h2>Las mejores Burguers de la ciudad</h2>
+    <h1 class="animate__animated animate__jackInTheBox">Smash Burger</h1>
+    <h2>Las mejores Burgers de la ciudad</h2>
 
     <!--API DE WPP-->
     <a class="pedido" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
@@ -82,7 +82,7 @@
         <div class="card">
             <div class="card-body">
                 <img src="./assets/clasica.jpg" class="card-img-top" alt="...">
-                <h4 class="product-title">Clasica Burguer</h2>
+                <h4 class="product-title">Clasica Burger</h2>
                 <h5 class="price">$700</h5>
                 <button class="btn" id="clasica">
                     Más info
@@ -92,7 +92,7 @@
             <!--MODAL-->
             <div class="modal_container" id="modalClasica">
                 <div class="modal_">
-                    <h4>Clasica Burguer</h4>
+                    <h4>Clasica Burger</h4>
                     <p>Ingredientes:</p>
                     <p>2 medallon de 120gr, doble queso cheddar, tomate, lechuga y salsa de la casa.</p>
                     <button class="btn" id="cerrarClasica">Cerrar</button>
@@ -103,7 +103,7 @@
         <div class="card">
             <div class="card-body">
                 <img src="./assets/mega.jpg" class="card-img-top" alt="...">
-                <h4 class="product-title">Mega Burguer</h4>
+                <h4 class="product-title">Mega Burger</h4>
                 <h5 class="price">$770</h5>
                 <button class="btn" id="mega">
                     Más info
@@ -113,7 +113,7 @@
             <!--MODAL-->
             <div class="modal_container" id="modalMega">
                 <div class="modal_">
-                    <h4>Mega Burguer</h4>
+                    <h4>Mega Burger</h4>
                     <p>Ingredientes:</p>
                     <p>2 medallones de 120gr, cebolla caramelizada y combinación de queso muzzarella y queso azul.</p>
                     <button class="btn" id="cerrarMega">Cerrar</button>
@@ -124,7 +124,7 @@
         <div class="card">
             <div class="card-body">
                 <img src="./assets/premium.jpg" class="card-img-top" alt="...">
-                <h4 class="product-title">Premium Burguer</h4>
+                <h4 class="product-title">Premium Burger</h4>
                 <h5 class="price">$900</h5>
                 <button class="btn" id="premium">
                     Más info
@@ -134,7 +134,7 @@
             <!--MODAL-->
             <div class="modal_container" id="modalPremium">
                 <div class="modal_">
-                    <h4>Premium Burguer</h4>
+                    <h4>Premium Burger</h4>
                     <p>Ingredientes:</p>
                     <p>2 medallones de 120gr, doble feta de queso cheddar, panceta, pepinillos, cebolla crispy y salsa BBQ.</p>
                     <button class="btn" id="cerrarPremium">Cerrar</button>
@@ -155,7 +155,7 @@
             <!--MODAL-->
             <div class="modal_container" id="modalTriple">
                 <div class="modal_">
-                    <h4>Triple Burguer</h4>
+                    <h4>Triple Burger</h4>
                     <p>Ingredientes:</p>
                     <p>3 medallones de 120gr, triple queso cheddar, mucha panceta y salsa BBQ.</p>
                     <button class="btn" id="cerrarTriple">Cerrar</button>
@@ -176,7 +176,7 @@
             <!--MODAL-->
             <div class="modal_container" id="modalChesse">
                 <div class="modal_">
-                    <h4>Cheese Burguer</h4>
+                    <h4>Cheese Burger</h4>
                     <p>Ingredientes:</p>
                     <p>2 medallones de 120gr, doble queso cheddar, cebolla brunoise y salsa BBQ</p>
                     <button class="btn" id="cerrarChesse">Cerrar</button>
@@ -187,7 +187,7 @@
         <div class="card">
             <div class="card-body">
                 <img src="./assets/slash.jpg" class="card-img-top" alt="...">
-                <h4 class="product-title">Slash Burguer</h4>
+                <h4 class="product-title">Slash Burger</h4>
                 <h5 class="price">$740</h5>
                 <button class="btn" id="slash">
                     Más info
@@ -197,7 +197,7 @@
             <!--MODAL-->
             <div class="modal_container" id="modalSlash">
                 <div class="modal_">
-                    <h4>Slash Burguer</h4>
+                    <h4>Slash Burger</h4>
                     <p>Ingredientes:</p>
                     <p>2 medallones de 120gr, doble queso cheddar, cebolla caramelizada y salsa picante.</p>
                     <button class="btn" id="cerrarSlash">Cerrar</button>
@@ -208,7 +208,7 @@
         <div class="card">
             <div class="card-body">
                 <img src="./assets/Freddy.jpg" class="card-img-top" alt="...">
-                <h4 class="product-title">Freddy Burguer</h4>
+                <h4 class="product-title">Freddy Burger</h4>
                 <h5 class="price">$700</h5>
                 <button class="btn" id="freddy">
                     Más info
@@ -218,7 +218,7 @@
             <!--MODAL-->
             <div class="modal_container" id="modalFreddy">
                 <div class="modal_">
-                    <h4>Freddy Burguer</h4>
+                    <h4>Freddy Burger</h4>
                     <p>Ingredientes:</p>
                     <p>2 medallones de 120gr,  queso brie, cebolla caramelizada, rúcula, tomate y salsa agridulce.</p>
                     <button class="btn" id="cerrarFreddy">Cerrar</button>
